src/webservers/WebServer-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  labels:
    app: templateapp
spec:
  type: LoadBalancer
  ports:
  - port: 4200
    targetPort: 80
  selector:
    app: nginx
